# metroidvaina

./: Cargo.toml
metroidvania/src/: main.rs
metroidvania/src/player/: mod.rs
metroidvania/src/time/: mod.rs  resources.rs  systems.rs
metroidvania/src/ui/: systems.rs
src/: collision_groups.rs  macros.rs  main.rs  shape_intersections.rs
src/behavior/: crouch.rs  demo_slash.rs  jump.rs  kick.rs  mod.rs  shot.rs  slide.rs  template.rs  walk.rs
src/characters/: mod.rs  resources.rs
src/characters/demo_player/: mod.rs  sprite_controller.rs
src/enemies/: mod.rs  systems.rs
src/input/: blocker.rs  buffer.rs  buffers.rs  directions.rs  input_frame.rs  input_query.rs  inputs.rs  mod.rs  resources.rs
src/player/: components.rs  mod.rs  state.rs  systems.rs
src/state/: animation.rs  facing_direction.rs  grounded.rs  mod.rs
src/time/: systems.rs
src/ui/: mod.rs  resources.rs
src/world/: functions.rs  mod.rs  systems.rs
