[package]
name = "metroidvainia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy_ecs = "0.14"
avian2d = "0.1.1"

leafwing-input-manager = "0.14"
bevy_asset_loader = { version = "0.21", features = ["2d"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[lints.clippy]
all = { level = "warn", priority = -1 }
# Lints from all we have decided to ignore.
type_complexity = "allow" # Bevy queries almost always trigger this.


pedantic = { level = "warn", priority = -1 }

# Lints from pedantic we will actively use.
match_same_arms                    = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned      = "warn"
struct_field_names                 = "warn" # Can be removed if it becomes too annoying.

# Lints from pedantic we have decided to ignore.
cast_precision_loss                = "allow" # Unavoidable because of how many floats bevy uses.
explicit_iter_loop                 = "allow" # Recommends less explicit style.
match_wildcard_for_single_variants = "allow" # Core pattern used in behaviors.
module_name_repetitions            = "allow" # Causes issues with name duplication on Plugins.
needless_pass_by_value             = "allow" # Bevy systems naturally violate this.
wildcard_imports                   = "allow" # Wildcard imports are nice.


restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow" # Blanket enable restriction to go through all the lints faster

# Lints from restriction we will actively use.
partial_pub_fields      = "warn" # Helps keep behaviors explicit.
pub_without_shorthand   = "warn" # No "in" for pub(crate).
self_named_module_files = "warn" # Use mod.rs files.

# Lints from restriction we have decided to ignore.
# Possibly useful for release builds
default_numeric_fallback = "allow" # Could be useful for optimizing memory useage.
panic                    = "allow"
print_stdout             = "allow"
use_debug                = "allow"
# Annoying.
as_conversions                = "allow"
float_arithmetic              = "allow"
min_ident_chars               = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods         = "allow"
shadow_unrelated              = "allow"
single_call_fn                = "allow"
single_char_lifetime_names    = "allow"
std_instead_of_core           = "allow"
# Possibly useful, but overly broad.
absolute_paths          = "allow"
arithmetic_side_effects = "allow"
implicit_return         = "allow"
pattern_type_mismatch   = "allow"
wildcard_enum_match_arm = "allow"
# Opposes our existing style.
mod_module_files   = "allow" # No mod.rs files
pub_with_shorthand = "allow" # Required "in" for pub(in ...).
str_to_string      = "allow" # Recommends less explicit style.